# madTASKS

./: README.md  pyproject.toml
test-task/: -- SQLite.sql  alembic.ini  main.py  test_task.db
test-task/app/: app.py  models.py  schemas.py
test-task/app/auth/: auth_bearer.py  auth_handler.py
test-task/migrations/: env.py
test-task/migrations/versions/: 292edd1a7a6f_added_required_tables.py
