[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Tim Koval <madtracer00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.4"
databases = "^0.5.3"
uvicorn = "^0.15.0"
aiosqlite = "^0.17.0"
PyJWT = "^2.2.0"
python-decouple = "^3.5"
email-validator = "^1.1.3"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
